Add missing paragraph  -_-

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,9 @@
 name=NeoSWSerial
-version=3.0.1
+version=3.0.2
 author=SlashDevin
 maintainer=SlashDevin
 sentence=An efficient replacement for SoftwareSerial at baud rates 9600, 19200 and 38400.
+paragraph=Simultaneous RX & TX, does not require additional TIMERs, interrupts not disabled during RX
 category=Communication
 url=https://github.com/SlashDevin/NeoSWSerial
 architectures=avr
