--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ install:
     - pip install -U platformio
 
 script:
-    - platformio ci --lib="." --board=megaatmega2560 --board=mayfly
+    - platformio ci --lib="." --board=uno --board=megaatmega2560 --board=mayfly --board=feather32u4
