Initial upload of fork

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=NeoSWSerial
-version=3.0.5
-author=SlashDevin
-maintainer=SlashDevin
+name=PostNeoSWSerial
+version=1.0.1
+author=Hexaedron
+maintainer=Hexaedron
 sentence=An efficient replacement for SoftwareSerial at baud rates 9600, 19200 and 38400.
 paragraph=Simultaneous RX & TX, does not require additional TIMERs, interrupts not disabled during RX
 category=Communication
-url=https://github.com/SlashDevin/NeoSWSerial
+url=https://github.com/hexaedron/PostNeoSWSerial
 architectures=avr
-includes=NeoSWSerial.h
+includes=PostNeoSWSerial.h
