--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=PostNeoSWSerial
-version=1.0.1
+version=1.0.2
 author=Hexaedron
 maintainer=Hexaedron
 sentence=An efficient replacement for SoftwareSerial at baud rates 9600, 19200 and 38400.
-paragraph=Simultaneous RX & TX, does not require additional TIMERs, interrupts not disabled during RX
+paragraph=Now supports LGT8F328P
 category=Communication
 url=https://github.com/hexaedron/PostNeoSWSerial
 architectures=avr
